<resources>
    <string name="app_name">BookSharing - MAD</string>
    <string name="change_profile_image_txt">Change the profile image</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_favourite_books">Favourite Book Generes</string>
    <string name="hint_bio">Short Bio</string>
    <string name="hint_city">Your address (House Nr, Street City)</string>
    <string name="update_profile_btn">Update Profile</string>
    <string name="rating">rating</string>
    <string name="shared_books">shared books</string>
    <string name="my_books_btn">My Books</string>
    <string name="find_book_btn">Find Book</string>
    <string name="not_all_permission_granted">Not all permissions are granted. Please modify them in the settings page</string>
    <string name="permission_rationale_title">Camera and Gallery permissions are required</string>
    <string name="permission_rationale_message">We need to access your camera and gallery to give you the possibility to modify your profile image</string>
    <string name="crop_ok">Profile Image successfully updated</string>
    <string name="crop_not_ok">Cropping unsuccessful: </string>
    <string name="complete_fields">Please fill all the fields</string>
    <string name="tap_to_scan_the_isbn">Tap to scan the ISBN</string>
    <string name="isbn_hint">ISBN</string>
    <string name="tap_to_find_the_book">Tap to find the Book</string>
    <string name="no_book_found_message">I am really sorry! Try again or there is a way for you to add this book</string>
    <string name="manually">Manually!</string>
    <string name="add_book">Proceed</string>
    <string name="add_book_button">Add Book</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_book_image">Change book image</string>
    <string name="book_title_hint">Book Title</string>
    <string name="written_by_hint">Written by</string>
    <string name="category_hint">Category</string>
    <string name="small_review_hint">My review in 120 characters</string>
    <string name="add_to_the_library">Add to the library</string>
    <string name="mylibrary">MyLibrary</string>
    <string name="back">Back</string>
    <string name="signout">SignOut</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="register_here">Register Here.</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="display_name">Display Name</string>
    <string name="create_user">Create User</string>
    <string name="camera_permission">Camera permission are required to scan the barcode</string>
    <string name="written_by">Written by:</string>
    <string name="category_">Category:</string>
    <string name="published_in">Published in:</string>
    <string name="book_title_needed">We need the Book Title to store correctly the image, so please add it before</string>
    <string name="modify_image_internet_nedeed">To modify the book image you need an internet connection</string>
    <string name="fill_the_fields">Please fill all the required fields!</string>
    <string name="profile_image_internet_needed">To modify your profile image you need an internet connection</string>
    <string name="insert_email_and_password">Please insert email and password</string>
    <string name="correct_email_and_password">Please insert correct email and password, or check your connection</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="check_ISBN_or_internet">Add the ISBN or check you internet connection</string>
    <string name="registration_alert">Please use a valid email and a strong password, or check your internet connection</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCgzn-troqMxR31GY4W9rIQJfIG7Zgr-t0</string>
    <string name="book_not_near_to_you">The book you are looking for it\'s not near to you</string>
    <string name="crop_image_menu_crop">Crop</string>
    <string name="insert_the_title_of_the_book_you_are_looking_for">Insert the title of the book you are looking for</string>
    <string name="am_here">I am here...</string>
    <string name="accetta">ACCEPT</string>
    <string name="rifiuta">REJECT</string>
    <string name="cancella">CANCEL</string>
    <string name="conclude">CONCLUDE</string>
    <string name="remove_book">Remove book</string>
</resources>
