<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controller.EditProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="1dp">

        <LinearLayout
            android:onClick="backButtonPressed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:orientation="vertical">
           <Button
               android:layout_width="35dp"
               android:layout_height="35dp"
               android:layout_gravity="center"
               android:background="@drawable/ic_action_back"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:textColor="@android:color/white"
                android:layout_gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:onClick="signOutButtonPressed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical">
            <Button
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_action_sign_out"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signout"
                android:textColor="@android:color/white"
                android:layout_gravity="center"/>
        </LinearLayout>
    </RelativeLayout>



    <RelativeLayout
        android:id="@+id/progressBarLayout"
        android:visibility="invisible"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:elevation="1dp">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"/>


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/changeImageLayout"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@drawable/gradient"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/editProfileImage"
            tools:src="@drawable/profile_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            app:civ_border_width="1dp"
            app:civ_border_color="#FFFFFF"/>

        <Button
            android:id="@+id/changeProfileImageBtn"
            android:onClick="changeProfileImageBtnPressed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_profile_image_txt"
            android:textColor="#FFFFFF"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:background="@drawable/button_transparent"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/changeImageLayout"
        android:background="@android:color/white">

        <EditText
            android:id="@+id/nameEditTxt"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="25dp"
            android:hint="@string/hint_full_name"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/black"
            android:inputType="text"
            android:singleLine="true"
            android:padding="2dp"/>

        <EditText
            android:id="@+id/favouriteBooksGeneresEditTxt"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_favourite_books"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/black"
            android:inputType="text"
            android:singleLine="true"
            android:padding="2dp"/>

        <EditText
            android:id="@+id/bioEditTxt"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_bio"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/black"
            android:inputType="text"
            android:singleLine="true"
            android:padding="2dp"/>

        <EditText
            android:id="@+id/cityEditTxt"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_city"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/black"
            android:inputType="text"
            android:singleLine="true"
            android:padding="2dp"/>

        <android.support.v7.widget.CardView
            android:id="@+id/updateProfileCardView"
            android:onClick="updateProfileButtonPressed"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardCornerRadius="25dp"
            android:elevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/update_profile_btn"
                    android:textColor="#fff"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</RelativeLayout>