<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controller.AddBookDetailActivity"
    android:background="@drawable/gradient">

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="invisible"
        android:elevation="1dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:id="@+id/changeBookImageLayout"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@drawable/gradient"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/editBookImage"
            android:src="@drawable/book_add_image_icon"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            app:civ_border_width="1dp"
            app:civ_border_color="#FFFFFF"
            android:onClick="changeBookImageBtnPressed"/>

        <Button
            android:id="@+id/changeBookImageBtn"
            android:onClick="changeBookImageBtnPressed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_book_image"
            android:textColor="#FFFFFF"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:background="@drawable/button_transparent"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/changeBookImageLayout"
        android:background="@android:color/white">

        <EditText
            android:id="@+id/bookTitleEditTxt"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="25dp"
            android:hint="@string/book_title_hint"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/black"
            android:inputType="text"
            android:singleLine="true"
            android:padding="2dp"/>

        <EditText
            android:id="@+id/bookAuthorEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:hint="@string/written_by_hint"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/black"
            android:inputType="text"
            android:singleLine="true"
            android:padding="2dp"/>

        <EditText
            android:id="@+id/categoryEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:hint="@string/category_hint"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/black"
            android:inputType="text"
            android:singleLine="false"
            android:maxLines="3"
            android:padding="2dp"/>

        <EditText
            android:id="@+id/myReviewEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:hint="@string/small_review_hint"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/black"
            android:inputType="text"
            android:singleLine="true"
            android:padding="2dp"/>

        <android.support.v7.widget.CardView
            android:id="@+id/addBooktoLibraryCardView"
            android:onClick="addBookToLibraryButtonPressed"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardCornerRadius="25dp"
            android:elevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_to_the_library"
                    android:textColor="#fff"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
    </LinearLayout>

</RelativeLayout>