<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controller.ShowProfileActivity"
    android:background="@android:color/white">

    <View
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:background="@drawable/gradient"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/button_relative_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:onClick="addBookButtonPressed"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:background="@drawable/ic_action_add_book"
                    android:layout_marginTop="15dp"
                    android:layout_gravity="center" />

                <TextView
                    android:onClick="addBookButtonPressed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/add_book_button"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentRight="true">

                <Button
                    android:onClick="editProfileBtnPressed"
                    android:id="@+id/editProfileBtn"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:background="@drawable/edit_profile"
                    android:layout_marginTop="15dp"
                    android:layout_gravity="center" />

                <TextView
                    android:onClick="editProfileBtnPressed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_profile"
                    android:layout_gravity="center"
                    android:textStyle="bold"/>
            </LinearLayout>


        </RelativeLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-20dp">


            <de.hdodenhof.circleimageview.CircleImageView
                android:onClick="editProfileBtnPressed"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                tools:src="@drawable/profile_image"
                app:civ_border_width="2dp"
                android:elevation="1dp"
                android:layout_centerHorizontal="true"
                app:civ_border_color="#000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="85dp"
                    app:contentPadding="15dp"
                    app:cardCornerRadius="10dp"
                    app:cardBackgroundColor="@android:color/white">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/nameTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="Giuseppe Di Giorno"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            android:layout_marginTop="60dp"
                            android:layout_gravity="center_horizontal"
                            android:textColor="@android:color/black"/>

                        <TextView
                            android:id="@+id/favouriteBooksGeneresTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="Drama, romance, horror"
                            android:textSize="17sp"
                            android:layout_marginTop="7dp"
                            android:layout_gravity="center_horizontal"
                            android:textColor="@android:color/darker_gray"/>

                        <TextView
                            android:id="@+id/bioTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="I love eating pizza and pazza. My favourite music bands are Pink Floyd and Coldplay. I am a supporter of Juventus and Mercedes."
                            android:textAlignment="center"
                            android:textSize="15sp"
                            android:textStyle="italic"
                            android:layout_marginTop="10dp"
                            android:layout_gravity="center_horizontal"
                            android:textColor="@android:color/darker_gray"/>

                        <TextView
                            android:id="@+id/cityTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="Torino, Italy"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:layout_marginTop="15dp"
                            android:layout_gravity="center_horizontal"
                            android:textColor="@android:color/black"/>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:layout_marginTop="15dp">

                    <LinearLayout
                        android:layout_width="62dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="9.9"
                            android:textStyle="bold"
                            android:textSize="35sp"
                            android:layout_gravity="center_horizontal"
                            android:textColor="@android:color/darker_gray"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:textSize="20sp"
                            android:text="@string/rating"
                            android:textColor="@android:color/black"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="62dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="114"
                            android:textStyle="bold"
                            android:textSize="35sp"
                            android:layout_gravity="center_horizontal"
                            android:textColor="@android:color/darker_gray"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:textSize="20sp"
                            android:text="@string/shared_books"
                            android:textColor="@android:color/black"/>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <Button
                        android:onClick="myBooksButtonClicked"
                        android:layout_width="125dp"
                        android:layout_height="wrap_content"
                        android:text="@string/my_books_btn"
                        android:background="@drawable/button_outline_start_grad"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_weight="1"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"/>

                    <Button
                        android:onClick="findABookButtonPressed"
                        android:layout_width="125dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_outline_end_grad"
                        android:text="@string/find_book_btn"
                        android:textColor="@color/colorPrimary"
                        android:layout_weight="1"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"/>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>
